--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <canvas></canvas>
+    <script src="classes.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
