base for os and boot up screen

--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta content='IE=edge'>
     <title>OP-protect-mouse</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 <body>
-    <canvas></canvas>
+    <div class="startup">
+        <p class="hidden">C:\ <strong>BOOTING:</strong></p>
+        <p class="hidden">C:\ ERROR: NEW USER</p>
+        <p class="hidden">C:\ INITIALIZING TRAINER</p>
+    </div>
+    <div class="window" id="game">
+        <canvas></canvas>
+    </div>
     <script src="classes.js"></script>
     <script src="script.js"></script>
 </body>
