split scriptjs into utiljs

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="window" id="game">
         <canvas></canvas>
     </div>
+    <script src="util.js"></script>
     <script src="classes.js"></script>
     <script src="script.js"></script>
 </body>
